tests/data-clumps/test-cases/parameter-parameter/simple-less-variables/negative/typescript/source/BillingProcessor.ts
export class BillingProcessor {
  createInvoice(patientId: number, doctorId: number): void {
    console.log(`Creating invoice for patient ${patientId} and doctor ${doctorId}`);
  }
}
